# cart_pole

cart_pole_description/cart_pole/: cart_pole_stl_convert.py  robot.urdf  robot.urdf.xacro  robot_urdf.urdf  simulation_mujoco.py  simulation_pybullet.py
cart_pole_description/launch/: all.launch.py  description.launch.py  gazebo_gserver.launch.xml
cart_pole_drake/: CMakeLists.txt  package.xml
cart_pole_drake/config/: lqr_with_swing_up_controller.yaml
cart_pole_drake/launch/: drake_controller.launch.py
cart_pole_drake/src/: drake_lqr.cpp
cart_pole_lypunov_lqr/config/: controller.yaml
cart_pole_lypunov_lqr/launch/: lqr_swinger.launch.py
cat_pole_de/config/: de_simulation.yaml
cat_pole_de/include/cat_pole_de/: de_simulation_node.hpp
cat_pole_de/src/: de_simulation_node.cpp
